--- a/CopySpace/Entertainment_homepage/entertainment.html
+++ b/CopySpace/Entertainment_homepage/entertainment.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <style>
@@ -21,10 +20,50 @@ body{
 
 }
 
+.zz.active{
+ filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+	}
+	
+	.yy.active{
+ filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+	}
+	
+		.xx.active{
+ filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+	}
+	
+		.ww.active{
+ filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+	}
+	
+			.mm.active{
+ filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+	}
 hr{
 width:60px;
 background-color:black;
 height:1px;}
+
 
 
 
@@ -77,6 +116,111 @@ width:auto;}
 
 
 
+.kebab {
+  position:fixed;
+  cursor: pointer;
+  display: none;
+  box-sizing: border-box;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  border-radius: 50%;
+  padding:11px 23px;
+  top: 12px;
+  margin-left:110px;
+  margin-top:550px;
+}
+.kebab figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: white;
+  margin: 3px 0;
+}
+
+.middle {
+
+  
+  position: relative;
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+.middle.active {
+  transform: scale(4.5);
+	background-color:black;
+}
+
+.cross {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%) scale(0);
+  margin-top: -1px;
+  font-family: "Nunito", sans-serif;
+  color: white;
+  
+  font-size: 22px;
+  user-select: none;
+}
+
+.cross.active {
+  transform: translate(-50%, -50%) scale(1);
+
+}
+
+.circle{
+ height: 40px;
+  width: 40px;
+  background-color: black;
+  border-radius: 50%;
+  padding:10px 13px;
+
+  
+  }
+
+
+
+.dropdown {
+  position: absolute;
+  right:3rem;
+  top: -45px;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+
+  border:0px;
+}
+.dropdown li {
+  display: block;
+  width: 100%;
+  background-color:transparent
+}
+.dropdown li a {
+  width: 100%;
+  padding: 4px 10px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+.dropdown li a:hover {
+  background: transparent;
+}
+.dropdown:hover ul {
+  transform: scale(1);
+}
+
+.dropdown.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+
+.fa{
+color:white;
+}
+
+
+
+
 @media only screen and (max-width: 765px) {
 .thumb{
  padding:0px;
@@ -85,8 +229,89 @@ width:auto;}
 
 }
 }
+@media only screen and (max-width: 900px)
+{
+.kebab {
+  position:fixed;
+  cursor: pointer;
+  display: inline-block;
+  box-sizing: border-box;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  border-radius: 50%;
+  padding:11px 23px;
+  top: 12px;
+  margin-left:110px;
+  margin-top:510px;
+}
+
+.dropdown {
+
+  right:3rem;
+  top: -45px;
+
+}
+
+}
+@media only screen and (max-width: 1200px) and (min-width:765px)
+{
+.kebab {
+  position:fixed;
+  cursor: pointer;
+  display: inline-block;
+  box-sizing: border-box;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  border-radius: 50%;
+  padding:11px 23px;
+  top: 12px;
+ margin-left:300px;
+  margin-top:800px;
+}
+
+.dropdown {
+
+  right:3rem;
+  top: -45px;
+
+}
+
+}
+
+
+
+
+@media only screen and (max-width: 1500px) and (min-width: 900px)
+{
+
+.kebab {
+  position:fixed;
+  cursor: pointer;
+  display: inline-block;
+  box-sizing: border-box;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  border-radius: 50%;
+  padding:11px 23px;
+  top: 12px;
+  margin-left:400px;
+  margin-top:1100px;
+}
+
+.dropdown {
+
+  right:3rem;
+  top: -45px;
+
+}
+}
+
 </style>
 <body>
+<div class="ww">
 <div class="container animate__animated animate__pulse" width="100%">
 <div class="row">
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -96,9 +321,12 @@ width:auto;}
 </div>
 </div>
 </br>
+</div>
+<div class="xx">
 <h1 class="animate__animated animate__flipInX"><center>Featured Artists</center></h1>
-<hr></hr></br>
+<hr></hr></br></div>
 <center>
+<div class="mm">
 <div class="container">
 	<div class="row">
 		<div class="row">
@@ -162,8 +390,8 @@ width:auto;}
                          alt="Another alt text">
                 </a>
             </div>
-        </div></div></div>
-
+        </div></div></div></div></div>
+<div class="yy">
 <center>
 <button> VIEW ALL ARTISTS </button></center>
 
@@ -180,9 +408,10 @@ width:auto;}
  </div>
  </div>
  </div>
+ 
 </br></br>
-
-
+</div>
+<div class="zz">
 <h1 class="animate__animated animate__flipInX"><center>Meet Our Team</center></h1>
 <hr></hr></br>
 
@@ -217,8 +446,56 @@ width:auto;}
     <p class="card-text">We know what is the importance of Hospitality & Logistics in any wedding. Our Hospitality & Logistics Head Chetan Mewara keeps his keen observation in finding the right kind of management and hospitality to look after the guests into any type of Wedding.</p>
 
   </div>
-</div></div></div></div></div>
+</div></div></div></div></div></div>
 
+ <div class="kebab">
+    <figure></figure>
+    <figure class="middle"></figure>
+    <p class="cross">x</p>
+    <figure></figure>
+    <ul class="dropdown">
+      <li><a href="http://www.g.com"><div class="circle"><i class="fa fa-phone fa-1x"></i></div></a></li>
+      <li><a href="http://www.g.com"><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div></a></li>
+      <li><a href="http://www.g.com"><div class="circle"><i class="fa fa-facebook-official fa-1x"></i></div></a></li>
+ 
+    </ul>
+  </div>
+
+
+
+
+
+
+  
+  
+
+
+<script>
+
+   
+var kebab = document.querySelector('.kebab'),
+    middle = document.querySelector('.middle'),
+    cross = document.querySelector('.cross'),
+    dropdown = document.querySelector('.dropdown');
+	    zz = document.querySelector('.zz');
+		yy = document.querySelector('.yy');
+		
+		ww = document.querySelector('.ww');
+		xx = document.querySelector('.xx');
+		mm = document.querySelector('.mm');
+
+kebab.addEventListener('click', function() {
+  middle.classList.toggle('active');
+  cross.classList.toggle('active');
+  dropdown.classList.toggle('active');
+zz.classList.toggle('active');
+yy.classList.toggle('active');
+
+ww.classList.toggle('active');
+xx.classList.toggle('active');
+mm.classList.toggle('active');
+});
+</script>
 
 </body>
 </html>
