--- a/CopySpace/Entertainment_homepage/artist.html
+++ b/CopySpace/Entertainment_homepage/artist.html
@@ -86,6 +86,19 @@ justify-content:center;
 i{
 padding:10px;}
 
+@media only screen and (max-width: 350px) {
+button{
+
+color:black;
+background-color:white;
+border:1px solid black;
+padding:2px 20px 2px 20px;
+transition: transform .2s;
+font-size:12px;
+}
+
+}
+
 @media only screen and (max-width: 765px) {
 .thumb{
 width:30%;
