--- a/CopySpace/Entertainment_homepage/artist.html
+++ b/CopySpace/Entertainment_homepage/artist.html
@@ -32,7 +32,7 @@ height:1px;}
 
 
 
-.thumb{
+.thumbaa{
   margin:0px;
    padding:0px;
    
@@ -40,10 +40,16 @@ height:1px;}
 
 
 }
-.img-thumbnail
+.img-thumbnailaa
 {
- border:0px;
 
+ border:0px;
+ padding: .25rem;
+    background-color: #fff;
+
+    border-radius: .25rem;
+    max-width: 100%;
+    height: auto;
 
 }
 
@@ -53,7 +59,7 @@ margin-left:5px;
 
 }
 
-button{
+#buttonaa{
 
 color:black;
 background-color:white;
@@ -66,9 +72,9 @@ font-size:19px;
 
 
 
-img:hover {opacity: 0.6}
+#ddaa:hover {opacity: 0.6}
 
-button:hover {
+#buttonaa:hover {
 
 color:white;
 background-color:black;
@@ -78,16 +84,16 @@ background-color:black;
 
 }
 
-#cc{
+#ccaa{
 justify-content:center;
 
 }
 
-i{
+#iaa{
 padding:10px;}
 
 @media only screen and (max-width: 350px) {
-button{
+#buttonaa{
 
 color:black;
 background-color:white;
@@ -100,7 +106,7 @@ font-size:19px;
 }
 
 @media only screen and (max-width: 765px) {
-.thumb{
+.thumbaa{
 width:30%;
 }
 
@@ -122,7 +128,7 @@ display:inline-block;
 <div class="container animate__animated animate__pulse">
 <div class="row">
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin:auto;">
-      <center><img src="badshah1.png" 
+      <center><img src="badshah1.png"  id="ddaa"
 	alt="Badhshah" width="100%"></center>
  
 </div>
@@ -136,30 +142,30 @@ display:inline-block;
  </br>
 <center>
 
-<button>BOOK ARTIST</button> <button>ALL ARTISTS</button></center> </br>
-<center><i class="fa fa-facebook fa-2x"></i> <i class="fa fa-youtube-play fa-2x"></i><i class="fa fa-instagram fa-2x"></i></center>
+<button id="buttonaa">BOOK ARTIST</button> <button id="buttonaa">ALL ARTISTS</button></center> </br>
+<center><i class="fa fa-facebook fa-2x" id="iaa"></i> <i class="fa fa-youtube-play fa-2x" id="iaa"></i><i class="fa fa-instagram fa-2x" id="iaa"></i></center>
 </div>
 </div>
 <center>
-<div class="row" id="cc">
+<div class="row" id="ccaa">
 
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb animate__heartBeat">
-                <a class="thumbnail" href="#">
-                    <img class="img-thumbnail"
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
+                <a href="#">
+                    <img class="img-thumbnailaa" id="ddaa"
                          src="badshah2.png"
                          alt="Another alt text">
                 </a>
             </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb animate__heartBeat">
-                <a class="thumbnail" href="#">
-                    <img class="img-thumbnail"
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
+                <a href="#">
+                    <img class="img-thumbnailaa" id="ddaa"
                          src="badshah3.png"
                          alt="Another alt text">
                 </a>
             </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumb animate__heartBeat">
-                <a class="thumbnail" href="#">
-                    <img class="img-thumbnail"
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
+                <a href="#">
+                    <img class="img-thumbnailaa" id="ddaa"
                          src="badshah4.png"
                          alt="Another alt text">
                 </a>
