--- a/CopySpace/Entertainment_homepage/artist.html
+++ b/CopySpace/Entertainment_homepage/artist.html
@@ -43,21 +43,18 @@ height:1px;}
 .img-thumbnailaa
 {
   border:0px;
- padding: .25rem;
+ padding: 2px;
+ margin-top:5px;
     background-color: #fff;
 
-    border-radius: .25rem;
+    border-radius:0;
     max-width: 100%;
     height: auto;
 
 
 }
 
-p{
-margin-right:5px;
-margin-left:5px;
 
-}
 
 #buttonaa{
 
@@ -73,6 +70,7 @@ font-size:19px;
 
 
 #ddaa:hover {opacity: 0.6}
+#ssaa:hover {opacity: 0.6}
 
 #buttonaa:hover {
 
@@ -86,8 +84,9 @@ background-color:black;
 
 #ccaa{
 justify-content:center;
-
+margin:0;
 }
+
 
 #iaa{
 padding:10px;}
@@ -102,6 +101,8 @@ padding:2px 10px 2px 10px;
 transition: transform .2s;
 font-size:19px;
 }
+#ssaa{
+display:none;}
 
 }
 
@@ -110,21 +111,22 @@ font-size:19px;
 width:30%;
 }
 
-
+#ssaa{
+display:none;}
 }
+
 
 
 </style>
 <body>
 
 <div class="container animate__animated animate__pulse">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin:auto;">
-      <center><img src="badshah1.png" id="ddaa"
+<div class="row" >
+<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="margin-top:auto; margin-bottom:auto; margin-left:0px;" >
+  <center> <img src="badshah1.png" id="ddaa" style="padding:2px;"
 	alt="Badhshah" width="100%"></center>
- 
 </div>
-<div class="col-lg-5 col-md-6 col-sm-12 col-xs-12"  >
+<div class="col-lg-5 col-md-12 col-sm-12 col-xs-12" style="margin-top:auto; margin-bottom:auto; margin-left:0px;"  >
      <h1 class="animate__animated animate__flipInX"><center>Badshah</center></h1>
 	 <h5><center>Singer | Performer</center></h5>
 	 
@@ -143,21 +145,21 @@ width:30%;
 
 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
                 <a  href="#">
-                    <img class="img-thumbnailaa" id="ddaa"
+                    <img class="img-thumbnailaa" id="ssaa"
                          src="badshah2.png" 
                          alt="Another alt text">
                 </a>
             </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
                 <a  href="#">
-                    <img class="img-thumbnailaa" id="ddaa"
+                    <img class="img-thumbnailaa" id="ssaa"
                          src="badshah3.png"
                          alt="Another alt text">
                 </a>
             </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 thumbaa animate__heartBeat">
                 <a  href="#">
-                    <img class="img-thumbnailaa" id="ddaa"
+                    <img class="img-thumbnailaa" id="ssaa"
                          src="badshah4.png"
                          alt="Another alt text">
                 </a>
