--- a/CopySpace/Entertainment_homepage/artist.html
+++ b/CopySpace/Entertainment_homepage/artist.html
@@ -115,7 +115,10 @@ width:30%;
 display:none;}
 }
 
-
+@media only screen and (max-width: 800px) and (min-width: 700px){
+#ddaa{
+width:60%;
+height:auto;}}
 
 </style>
 <body>
