--- a/CopySpace/portfolio new.html
+++ b/CopySpace/portfolio new.html
@@ -34,25 +34,38 @@ body {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-align: center;
-	        align-items: center;
+	align-items: center;
 	-webkit-box-pack: center;
-	        justify-content: center;
+	justify-content: center;
 	text-decoration: none;
 	z-index: 999;
 	color: rgba(255,255,255,.5);
 	font-size: 5rem;
-	font-family: monospace;
+	font-family: "Myriad Pro",  monospace;
 	-webkit-transition: all .2s;
 	transition: all .2s;
 }
+
 .prev:hover,
 .next:hover {
 	color: rgba(255,255,255,.8);
 }
-.prev {left: -25%;}
-.next {right: -25%;}
-.active .prev {left: 0;}
-.active .next {right: 0;}
+.prev {
+    left: -25%;
+}
+
+.next {
+    right: -25%;
+}
+
+.active .prev {
+    left: 0;
+}
+
+.active .next {
+    right: 0;
+}
+
 .lightbox-wrapper {
 	margin: 5vh auto;
 	max-width: 95%;
@@ -212,7 +225,16 @@ main.lightbox-wrapper div:not(.show):hover img {
 	flex-wrap: wrap;
   }
   .lightbox-wrapper div{
-    margin:10px auto;
+    margin:0.1px auto;
+  }
+  .heading{
+    font-size: 30px;
+  }
+  .heading div{
+    font-size: 17px;
+  }
+  .heading .button {
+    font-size: 17px;
   }
 }
 </style>
