--- a/CopySpace/portfolio new.html
+++ b/CopySpace/portfolio new.html
@@ -254,7 +254,8 @@ main.lightbox-wrapper div:not(.show):hover img {
     <a href="#" class="prev">&lt;</a>
 	<a href="#" class="next">&gt;</a>
 	<main class="lightbox-wrapper">
-		<div><img src="https://static.wixstatic.com/media/98d8c3_16c0634fb5bb4e10b5e4a73b188ec701~mv2_d_1247_1666_s_2.jpg/v1/crop/x_0,y_127,w_1247,h_1412/fill/w_555,h_629,al_c,q_80,usm_0.66_1.00_0.01/98d8c3_16c0634fb5bb4e10b5e4a73b188ec701~mv2_d_1247_1666_s_2.webp" alt=""></div>
+		<div>
+		<img src="https://static.wixstatic.com/media/98d8c3_16c0634fb5bb4e10b5e4a73b188ec701~mv2_d_1247_1666_s_2.jpg/v1/crop/x_0,y_127,w_1247,h_1412/fill/w_555,h_629,al_c,q_80,usm_0.66_1.00_0.01/98d8c3_16c0634fb5bb4e10b5e4a73b188ec701~mv2_d_1247_1666_s_2.webp" alt=""></div>
 		<div class="vertical"><img src="https://static.wixstatic.com/media/98d8c3_2568e6c7c84e41cc804ccaf554873fab~mv2.jpg/v1/fill/w_960,h_641,al_c,q_90/98d8c3_2568e6c7c84e41cc804ccaf554873fab~mv2.webp" alt=""></div>
 		<div class="horizontal"><img src="https://static.wixstatic.com/media/98d8c3_9dd3dfa2d7484c92bbf6980d1b7473f2~mv2.jpg/v1/fill/w_1110,h_740,al_c,q_90,usm_0.66_1.00_0.01/98d8c3_9dd3dfa2d7484c92bbf6980d1b7473f2~mv2.webp" alt=""></div>
 		<div><img src="https://static.wixstatic.com/media/98d8c3_f3d46d278dcb455a9e7143da9f7c3eb1~mv2.jpg/v1/crop/x_69,y_0,w_885,h_683/fill/w_885,h_683,al_c,q_85/98d8c3_f3d46d278dcb455a9e7143da9f7c3eb1~mv2.webp" alt=""></div>
