--- a/CopySpace/process.html
+++ b/CopySpace/process.html
@@ -65,7 +65,7 @@
     }
 	
 	.quote{
-	    background-color: #c4bcbc;
+	    background-color: #b6e3cc;
 		font-size:40px;
 		line-height: 60px;
 		//padding: 10px;
@@ -142,7 +142,7 @@
 		cursor: pointer;
         text-decoration: none;
 		margin:10px 20px;
-		background-color: #c4bcbc;
+		background-color: #b28f5e;
 	}
 	
 	@media screen and (max-width: 1000px){
