--- a/CopySpace/process.html
+++ b/CopySpace/process.html
@@ -65,7 +65,7 @@
     }
 	
 	.quote{
-	    background-color: #b6e3cc;
+	    background-color: #d0f2e1;
 		font-size:40px;
 		line-height: 60px;
 		//padding: 10px;
